[gd_scene load_steps=2 format=3 uid="uid://dbru3388du004"]

[ext_resource type="Script" path="res://src/components/hurt_box.gd" id="1_ms0e2"]

[node name="HurtBox" type="Area2D"]
script = ExtResource("1_ms0e2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
debug_color = Color(0, 1, 0, 0.419608)

[node name="IFramesTimer" type="Timer" parent="."]
wait_time = 0.5

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="timeout" from="IFramesTimer" to="." method="_on_i_frames_timer_timeout"]
